@@ -1,5 +1,12 @@
 2003-11-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
+	* prioqueue.tcl: Applied patch in file 64215 of [SF Tcllib Bug 822850].
+	* skiplist.tcl:  This cleans up a number of dangerous uses of [eval]
+	* matrix.tcl:    and makes them more robust.
+	* queue.tcl:
+	* stack.tcl:
+	* pool.tcl:
+	
 	* pool.tcl (::struct::pool::request): Changed to return 0 as
 	  documented when trying to get an already allocated item. Fixed
 	  [SF Tcllib Bug 842408]. Used the alternative fix.
